# Minishell

./: .gitignore  .gitignore.heredoc  CMakeLists.txt  Makefile  Makefile.linux  README.md  minishell  minishell.h  nigga-tests.c  parse_redirecs.c  print_args  print_args.c  test  test.c  test2  test2exit  test3  test4  test6  test_functions  wc  wc -l
Pipex_Minishell/: makefile  outfile  pipex
Pipex_Minishell/incs/: pipex.h
Pipex_Minishell/srcs/: forks_process.c  ft_split.c  pipex.c  pipex_utils.c  process_pipes  process_pipes.c
Rebuild Pipex/: fork_process.c  hello  makefile  pipex  pipex.c  pipex.h  test2
Rebuild Pipex/incs/: pipex.h
Rebuild Pipex/srcs/: fork_process.c  ft_split.c  pipe_process.c  pipex.c  pipex_utils.c  utils.c
Rebuild Pipex/srcs/exec/: pipex.c  pipex_utils.c
Rebuild Pipex/srcs/parsing/: nigga-tests.c  parse_redirecs.c
built-ins/: echo.c  pwd.c
incs/: minishell.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_calloc.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd_back.c  ft_lstadd_front.c  ft_lstclear.c  ft_lstdelone.c  ft_lstiter.c  ft_lstlast.c  ft_lstmap.c  ft_lstnew.c  ft_lstsize.c  ft_memalloc.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memmove.c  ft_memset.c  ft_putchar_fd.c  ft_putendl_fd.c  ft_putnbr_fd.c  ft_putstr_fd.c  ft_realloc.c  ft_split.c  ft_split_len.c  ft_str_isalnum.c  ft_str_isalpha.c  ft_str_isdigit.c  ft_strchr.c  ft_strdup.c  ft_striteri.c  ft_strjoin.c  (+15 more)
srcs/built-ins/: echo.c  exit.c  pwd.c
srcs/exec/: built_ins_utils.c  built_ins_utils2.c  cd_exec.c  env_checker.c  env_exec.c  exec_hub.c  exec_process.c  exec_utils.c  export_exec.c  fork_process.c  ft_split.c  pipe_process.c  pipex.c  pipex_utils.c  process_pipe.c  process_pipe_built_in.c  set_redirection.c  sorting_hub.c  sorting_mod.c  unset_exec.c  utils.c
srcs/parsing/: check_cmdline.c  dollars.c  heredoc.c  nigga-tests.c  parse_redirecs.c  quotes.c  utils.c  utils_check_cmdline.c  utils_heredoc.c  utils_targmode_arrays.c
srcs/signals/: signal_handler.c
srcs/utils/: init.c
tests/: a  b  main.c  test4  test4ls
