cmake_minimum_required(VERSION 3.20)
project(Minishell C)

set(CMAKE_C_STANDARD 99)

include_directories(incs)
include_directories(libft)

add_executable(Minishell
        incs/minishell.h
        libft/ft_atoi.c
        libft/ft_bzero.c
        libft/ft_calloc.c
        libft/ft_isalnum.c
        libft/ft_isalpha.c
        libft/ft_isascii.c
        libft/ft_isdigit.c
        libft/ft_isprint.c
        libft/ft_isspace.c
        libft/ft_itoa.c
        libft/ft_lstadd_back.c
        libft/ft_lstadd_front.c
        libft/ft_lstclear.c
        libft/ft_lstdelone.c
        libft/ft_lstiter.c
        libft/ft_lstlast.c
        libft/ft_lstmap.c
        libft/ft_lstnew.c
        libft/ft_lstsize.c
        libft/ft_memchr.c
        libft/ft_memcmp.c
        libft/ft_memcpy.c
        libft/ft_memmove.c
        libft/ft_memset.c
        libft/ft_putchar_fd.c
        libft/ft_putendl_fd.c
        libft/ft_putnbr_fd.c
        libft/ft_putstr_fd.c
        #libft/ft_split.c
        libft/ft_split_len.c
        libft/ft_str_isalnum.c
        libft/ft_str_isalpha.c
        libft/ft_str_isdigit.c
        libft/ft_strchr.c
        libft/ft_strdup.c
        libft/ft_striteri.c
        libft/ft_strjoin.c
        libft/ft_strjoin_free.c
        libft/ft_strlcat.c
        libft/ft_strlcpy.c
        libft/ft_strlen.c
        libft/ft_strmapi.c
        libft/ft_strncmp.c
        libft/ft_strndup.c
        libft/ft_strnstr.c
        libft/ft_strrchr.c
        libft/ft_strstr.c
        libft/ft_strtrim.c
        libft/ft_substr.c
        libft/ft_tolower.c
        libft/ft_toupper.c
        libft/libft.h
        srcs/built-ins/echo.c
        srcs/built-ins/exit.c
        srcs/built-ins/pwd.c
        srcs/exec/built_ins_utils.c
        srcs/exec/built_ins_utils2.c
        srcs/exec/cd_exec.c
        srcs/exec/env_checker.c
        srcs/exec/env_exec.c
        srcs/exec/exec_hub.c
        srcs/exec/exec_process.c
        srcs/exec/exec_utils.c
        srcs/exec/export_exec.c
        srcs/exec/fork_process.c
        srcs/exec/ft_split.c
        srcs/exec/pipex_utils.c
        srcs/exec/process_pipe.c
        srcs/exec/process_pipe_built_in.c
        srcs/exec/set_redirection.c
        srcs/exec/sorting_hub.c
        srcs/exec/unset_exec.c
        srcs/parsing/check_cmdline.c
        srcs/parsing/dollars.c
        srcs/parsing/heredoc.c
        srcs/parsing/nigga-tests.c
        srcs/parsing/parse_redirecs.c
        srcs/parsing/quotes.c
        srcs/parsing/utils.c
        srcs/parsing/utils_check_cmdline.c
        srcs/parsing/utils_heredoc.c
        srcs/parsing/utils_targmode_arrays.c
        srcs/signals/signal_handler.c
        srcs/utils/init.c)

target_link_libraries(Minishell readline)